# Greedy-or-Divide-and-Conquer

./: CMakeLists.txt  README.md
shaders/: Mesh-Frag.fs  Mesh-Vert.vs
src/: includes.h  main.cpp  mesh.cpp  shader.hpp  ui.c  ui_style.c  window.cpp
